[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "libp2p-secio"
version = "0.1.0"

[dependencies]
bytes = "0.4.4"
futures = "*"
protobuf = "*"
tokio-core = "*"
tokio-io = "0.1.2"

[dependencies.libp2p-crypto]
path = "../libp2p-crypto-rs"

[dependencies.libp2p-identity]
path = "../libp2p-identity-rs"

[dependencies.mhash]
features = ["generation", "sha2"]
version = "0.2.0"

[dependencies.msgio]
path = "../msgio-rs"
