[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "libp2p-secio"
version = "0.1.0"

[dependencies]
bytes = "0.4.4"
protobuf = "1.4.1"
slog = "2.0.12"
tokio-core = "*"
tokio-io = "0.1.2"

[dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"

[dependencies.libp2p-crypto]
path = "../libp2p-crypto-rs"

[dependencies.libp2p-identity]
path = "../libp2p-identity-rs"

[dependencies.mhash]
features = ["generation", "sha2"]
version = "0.2.0"

[dependencies.msgio]
path = "../msgio-rs"
